<resources>
    <string name="app_name">OTTY</string>
    <string name="title_activity_information">informationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_help">helpActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="select_profile">The profile select screen is shown after the splashscreen and before the Main Menu. Select a child profile on the dropdown list or add a new profile and press the Start Evaluating button.</string>
    <string name="add_entry">Select NEW ENTRY button on the Main Menu and a calendar will show. Select the date you want to put an entry. Slide the slidebars according to the severity of the symptom (Normal, Mild, Moderate and Severe). You may also save notes on that specific day. Once you\'re done, don\'t forget to click the SAVE RECORD button or else your entry will not be saved.</string>
    <string name="analyze_entries">Choose the SUMMARY button shown on the Main Menu. You will be asked to choose a starting date and ending date for the summary of your entries. After choosing the dates, the bars will show you the analysis of your child. Each color is represented by a level of severity - refer to the legend provided.</string>
    <string name="what_autism">According to Autism Speaks, Autism, or autism spectrum disorder (ASD), refers to a broad range of conditions characterized by challenges with social skills, repetitive behaviors, speech and nonverbal communication.</string>
    <string name="why_observe">One of the many key aspects of autism therapy is observation and progress tracking. Therapists observe children during a therapy session and record their behaviors. These records are then analyzed so they can determine the child’s progress later on. It is important to keep track of the child’s progress so they can determine what needs more attention, how and why a child acts in a certain stimulus, and the improvements the child is making. The problem, however, is that a child may act differently in different places, that’s why therapists and SPED teachers advise autism parents to observe the child at home as well. Tony Attwood refers to this as the Jekyll and Hyde character (Attwood, 1998) as mentioned by the National Autistic Society. </string>
    <string name="what_behaviors">Children under the autism spectrum has specific behavior or “symptoms” that are needed to be observed. As mentioned by Assyria Ferrer, an occupational therapist, in an interview conducted by the researchers, some of the red flags of autism that are needed to be observed daily are as follows: </string>
    <string name="poor_waiting">Some children with Autism have very low patience and do not want to wait or do not understand the concept of waiting. You can measure the severity of this symptom by seeing how the child responds to waiting and for how long he can wait. The shorter the timespan of waiting, the more severe. \n\nNormal: child patiently waits when told to wait\nMild: child may get a little impatient, but listens when told to wait.\nModerate:child starts to whine or cry when asked to wait\nSevere:child begins to have tantrums or scream when asked to wait</string>
    <string name="hand_leading">Many autistic and PDD children develop an instrumental way of relating described as hand-leading. This means that the child takes your hand and pulls it to something he wants. What makes hand-leading an autistic behavior is that it is not coordinated with looking at the parent, or looking back and forth from the parent to the described object. You can measure this symptom by the frequency of its occurence. \n\nYou may measure the severity of hand-leading based on the number of times the child hand leads you throughout the day. None to few being normal and doing it almost the whole day as severe; specially if the child can talk but prefers to hand lead. You may ask your therapist for more specific criteria of hand-leading for your child.</string>
    <string name="sib">Self-injurious behavior (SIB) is one of the most devastating and challenging-to-treat behaviors of people with an autism spectrum disorder or a related developmental disability. The types of behavior vary greatly, but they can all lead to tissue damage, ranging from mild (e.g., redness, bruising) to moderate (e.g., bleeding) to severe (e.g., fractures). The most common forms of self-injury include banging and hitting the head; biting the arm, hand and wrist; and excessive scratching or pinching of the skin. Less common forms include pressing and poking of the eyes, hair pulling, and scratching or “digging” of the rectal area. \n\nRate the symptom based on the damage done to the child.</string>
    <string name="ssb">Self-stimulatory behavior or "stimming" are the repetitive body movements or repetitive movement of objects of people. Some examples are hand flapping, tapping repeatedly on the table, sniffing people, snapping fingers, making vocal sounds, repetitive blinking, moving fingers in front of the eyes, etc. \n\nSimilar with hand-leading, stimming can be rated based on the frequency of the stimming behavior. The type of stimming (i.e., hand-flapping, visual stimming, tapping the table) should also be taken into consideration. Again, ask your therapist for a specific criteria for your child\'s stimming behavior.</string>
    <string name="tantrums">Temper tantrums range from whining and crying to screaming, kicking, hitting, and breath holding. Tantrums may happen when kids are tired, hungry, or uncomfortable; or because they can\'t get something (for example, an object or a parent) to do what they want. Crying is one of the two most common behaviors in tantrums. Shouting, screaming, sobbing, flushing, arm flailing and leg kicking, arched back, rigid legs, tears, whimpering, heavy breathing, and pulling away are others. \n\nNormal: child shows none to little signs of tantrums. The child may whine or cry a little but stops when told to do so.\nMild: child starts whining and crying but stops after a few tries of telling to stop\nModerate: child is whining and crying and doesn\'t stop when told to do so; the child may also get angrier when told to stop\nSevere: screaming, breath-holding, kicking, hurting self or other people </string>
    <string name="about_app">This app is made to help families and guardians of autistic children to keep track of their child\'s behavior. This app serves as a recording tool only and WILL NOT diagnose a child of autism. It is best to ask for medical assistance to further understand the condition of your child.</string>
    <string name="about_dev"> The developers developed this application for their capstone requirement. The developers are Reanne Kate C. Aranza, Shyla Joy K. Gutierrez, and Raven Andrei C. Felismino. They refer to their group as "GreenTeam" inspired by the makers of Java.</string>
    <string name="summarydisclaimer">Please take note that the app will only be generating reports based on the number of entries you provided from your selected date range.</string>
    <string name="florence">Learn about autism. The more you know about autism, you educate yourself and you\'ll be able to make yourself informed and the decisions of the autistic child. Accept him/her. By that, you can love that autistic one so much because he/she is a blessing, a special one. Enjoy your kid\’s special quirks, celebrate small successes, and stop comparing your child to others. Feeling unconditionally loved and accepted will help your child more than anything else. \n\nFlorence Bahian</string>
    <string name="anonymous">Be patient. Not every therapies works, so don\'t stop trying if one doesn\'t work. Our children my have Autism, but every autism is different.</string>
    <string name="tips">1. Be consistent - both at home and on attendance to therapy. \n2. Carry over techniques taught by OT or SP. \n3.Be firm and do not let yourself be manipulated. \n4. Ask questions to your child\'s teachers. Especially on what to do for sensory difficulties and behavioral problems. \n5. Do not be ashamed of your child\'s condition. \n6. It does not matter that your child has been diagnosed with ASD. What matters is that we are doing the best that we can. \n\nAssyria Ferrer</string>
</resources>
