<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2DFA2"
    tools:context="com.greenteam.otty.aboutAutism">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer = "false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp">
            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:text="About Autism"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#ED5752"/>

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="What is Autism?"
                android:layout_below="@id/textView40"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#ED5752"/>

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/what_autism"
                android:layout_below="@id/textView41"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#A99F3C"/>

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Why do I need to observe my child?"
                android:layout_below="@id/textView42"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#ED5752"/>

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/why_observe"
                android:layout_below="@id/textView43"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#A99F3C"/>


            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="What are the behaviors I need to observe?"
                android:layout_below="@id/textView44"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#ED5752"/>

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/what_behaviors"
                android:layout_below="@id/textView45"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#A99F3C"/>

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Poor Waiting"
                android:layout_below="@id/textView46"
                android:layout_gravity="center_horizontal"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#ED5752"/>

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/poor_waiting"
                android:layout_below="@id/textView47"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#A99F3C"/>

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Hand-Leading"
                android:layout_below="@id/textView48"
                android:layout_gravity="center_horizontal"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#ED5752"/>

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hand_leading"
                android:layout_below="@id/textView49"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#A99F3C"/>

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Self-Injurious Behavior"
                android:layout_below="@id/textView50"
                android:layout_gravity="center_horizontal"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#ED5752"/>

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sib"
                android:layout_below="@id/textView51"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#A99F3C"/>

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Self-Stimulating Behavior"
                android:layout_below="@id/textView52"
                android:layout_gravity="center_horizontal"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#ED5752"/>

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ssb"
                android:layout_below="@id/textView53"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#A99F3C"/>

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Tantrums"
                android:layout_below="@id/textView54"
                android:layout_gravity="center_horizontal"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#ED5752"/>

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tantrums"
                android:layout_below="@id/textView55"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#A99F3C"/>

            <TextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Tips and Advice"
                android:layout_below="@id/textView56"
                android:layout_gravity="center_horizontal"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#ED5752"/>

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/florence"
                android:layout_below="@id/textView58"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#A99F3C"/>

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/anonymous"
                android:layout_below="@id/textView59"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#A99F3C"/>

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tips"
                android:layout_below="@id/textView60"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gravity_light"
                android:textStyle="bold"
                android:textColor="#A99F3C"/>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>